--- a/teste/estilo.css
+++ b/teste/estilo.css
@@ -59,3 +59,17 @@ h2, h3,h4{
   color: black;
   
 }
+ html, body {
+      height: 100%;
+      margin: 0;
+    }
+
+    .wrapper {
+      min-height: 100%;
+      margin-bottom: -50px;
+    }
+
+    .footer,
+    .push {
+      height: 50px;
+    }
